tests/rosetta/out/Rust/cartesian-product-of-two-or-more-lists-1.error
rustc error: exit status 1
error[E0368]: binary assignment operation `+=` cannot be applied to type `&str`
  --> /tmp/TestMochiToRustcartesian-product-of-two-or-more-lists-13306261287/001/prog.rs:22:13
   |
22 |             s += "[";
   |             -^^^^^^^
   |             |
   |             cannot use `+=` on type `&str`

error[E0368]: binary assignment operation `+=` cannot be applied to type `&str`
  --> /tmp/TestMochiToRustcartesian-product-of-two-or-more-lists-13306261287/001/prog.rs:25:17
   |
25 |                 s += row[j as usize].to_string();
   |                 -^--^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |                 | |
   |                 | `+` cannot be used to concatenate a `&str` with a `String`
   |                 cannot use `+=` on type `&str`
   |
   = note: string concatenation requires an owned `String` on the left

error[E0368]: binary assignment operation `+=` cannot be applied to type `&str`
  --> /tmp/TestMochiToRustcartesian-product-of-two-or-more-lists-13306261287/001/prog.rs:27:21
   |
27 |                     s += " ";
   |                     -^^^^^^^
   |                     |
   |                     cannot use `+=` on type `&str`

error[E0368]: binary assignment operation `+=` cannot be applied to type `&str`
  --> /tmp/TestMochiToRustcartesian-product-of-two-or-more-lists-13306261287/001/prog.rs:31:13
   |
31 |             s += "]";
   |             -^^^^^^^
   |             |
   |             cannot use `+=` on type `&str`

error[E0368]: binary assignment operation `+=` cannot be applied to type `&str`
  --> /tmp/TestMochiToRustcartesian-product-of-two-or-more-lists-13306261287/001/prog.rs:33:17
   |
33 |                 s += " ";
   |                 -^^^^^^^
   |                 |
   |                 cannot use `+=` on type `&str`

error[E0368]: binary assignment operation `+=` cannot be applied to type `&str`
  --> /tmp/TestMochiToRustcartesian-product-of-two-or-more-lists-13306261287/001/prog.rs:37:9
   |
37 |         s += "]";
   |         -^^^^^^^
   |         |
   |         cannot use `+=` on type `&str`

error[E0382]: use of moved value: `b`
  --> /tmp/TestMochiToRustcartesian-product-of-two-or-more-lists-13306261287/001/prog.rs:11:22
   |
8  |     fn cart2(a: Vec<i32>, b: Vec<i32>) -> Vec<Vec<i32>> {
   |                           - move occurs because `b` has type `Vec<i32>`, which does not implement the `Copy` trait
9  |         let mut p: Vec<Vec<i32>> = vec![];
10 |         for x in a {
   |         ---------- inside of this loop
11 |             for y in b {
   |                      ^ `b` moved due to this implicit call to `.into_iter()`, in previous iteration of loop
   |
note: `into_iter` takes ownership of the receiver `self`, which moves `b`
  --> /rustc/17067e9ac6d7ecb70e50f92c1944e545188d2359/library/core/src/iter/traits/collect.rs:313:18
help: consider iterating over a slice of the `Vec<i32>`'s content to avoid moving into the `for` loop
   |
11 |             for y in &b {
   |                      +

error: aborting due to 7 previous errors

Some errors have detailed explanations: E0368, E0382.
For more information about an error, try `rustc --explain E0368`.
